# ForwardingAlgorithm

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Console/: CMakeLists.txt
Console/Include/: Application.hpp  CMakeLists.txt  Command.hpp  CommandRepository.hpp  Context.hpp  GetForwardingPortCommand.hpp  GetForwardingPortsCommand.hpp  QuitCommand.hpp  SelectRoutingTableCommand.hpp
Console/Include/Commands/: CMakeLists.txt  Command.hpp  CommandRepository.hpp  GetForwardingPortCommand.hpp  GetForwardingPortsCommand.hpp  HelpCommand.hpp  (+3 more)
Console/Resources/: FirstRoutingTable.csv  FourteenUniqueAddresses.txt  SecondRoutingTable.csv  SixteenUniqueAddresses.txt
Console/Source/: Application.cpp  CMakeLists.txt  Command.cpp  CommandRepository.cpp  Context.cpp  GetForwardingPortCommand.cpp  GetForwardingPortsCommand.cpp  Main.cpp  QuitCommand.cpp  SelectRoutingTableCommand.cpp
Core/Include/: CMakeLists.txt  CSVRoutingTableLoader.hpp  ForwardedPortsWriter.hpp  IPv4.hpp  IPv4Loader.hpp  RouteMapping.hpp  Router.hpp  RoutingTableLoader.hpp  TextForwardedPortsWriter.hpp  TextIPv4Loader.hpp
Core/Include/Utility/: CMakeLists.txt  PathUtility.hpp  StringUtility.hpp
Core/Source/: CMakeLists.txt  CSVRoutingTableLoader.cpp  IPv4.cpp  RouteMapping.cpp  Router.cpp  TextForwardedPortsWriter.cpp  TextIPv4Loader.cpp
Test/: CMakeLists.txt
Test/Include/: CMakeLists.txt  MockRouterTableLoader.hpp
Test/Source/: CMakeLists.txt  CSVRoutingTableLoaderTest.cpp  IPv4Test.cpp  RouteMappingTest.cpp  RouterTest.cpp
Test/Source/Utility/: CMakeLists.txt  StringUtilityTest.cpp
(+12 files in other folders)
