CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(AssignmentThree VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CORE_PROJECT_NAME ${PROJECT_NAME}Core)
SET(TEST_PROJECT_NAME ${PROJECT_NAME}Test)

ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Test)